bugfix: background style fixed on mobile devices

--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  background: url("../../images/landing page/background2.jpg");
+  background: url("../images/landing page/background2.jpg");
   background-size: 4px;
   height: 969px;
   padding: 0;
